# Test_chat_app_inSHMEM

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README.md  cmakevariables.h.in
.github/workflows/: ccpp.yml
lib/ExampleLibrary/: CMakeLists.txt
lib/ExampleLibrary/include/: ExampleClass.hpp
lib/ExampleLibrary/source/: ExampleClass.cpp
services/: example_program.service  start-exampleprogram.sh  stop-exampleprogram.sh
src/ExampleProgram/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  ExampleLibrary_test.cpp
utils/: configure.sh
